	 spec_se.c,specplus3.c},pokefinder/{pokefinder.[ch]},ui/ui.h,
	 ui/gtk/{gtkinternals.h,gtkui.c,pokefinder.c},widget/widget.c:
	 various pokefinder improvements (patch #1150701) (Darren).
20050325 menu.[ch],menu_data.c,profile.c,ui.c,ui/ui.h,ui/gtk/gtkui.c,
	 widget/widget.c: improve profiler UI.
20050325 menu_data.c,widget/{Makefile.am,menu.c,pokefinder.c,widget.[ch],
	 widget_internals.h}: add widget pokefinder (patch #1150703)
	 (Darren).
20050325 ChangeLog: bring up to date.
20050325 ui/gtk/gtkui.c,widget/widget.c: add GTK+ joystick confirmation
	 dialog.
20050325 ui/gtk/gtkui.c: don't prompt for joysticks if disabled in config.
20050325 ui/gtk/picture.c: allow input to continue while the keyboard help
	 is being displayed (fixes bug #1145084).
20050326 ChangeLog,widget/{Makefile.am,error.c,menu.c,query.c,widget.[ch],
	 widget_internals.h}: add widget query confirmation dialog (patch
	 #1150708) (Darren).
20050327 z80/z80.c: page in TR-DOS ROM on NMI (enables Pentagon snapshot
	 function to work).
20050327 menu.[ch],ui/gtk/gtkui.c,widget/menu.c: check all media types for
	 changes on exit via widget UIs.
20050402 machines/specplus3.c: stop cancelled attempts to save a +3 disk
	 from silently ejecting the disk.
20050402 ui/gtk/gtkui.c: remove unused variable from menu_file_exit().
20050402 z80/{coretest.c,z80.c}: page in ROM 2 on NMI on Scorpion: enables
	 monitor to work (fixes bug #1094070) (thanks, Erik Kunze).
20050425 fuse.c,settings.pl,sound.c,tape.c,trdos.c,machines/tc2048.c,
	 ui/gtk/binary.c,z80/z80_ops.c: gcc 4.0 fixups.
20050427 event.c: don't reset tstates at the end of
	 event.c:event_force_events() (fixes bug #1163983; thanks, Jon
	 Needle).
20050427 ui/sdl/sdldisplay.c: check smallest supported fullscreen resolution, and
         if we don't have a resonable match try to find one (Fred).
20050501 widget/{.cvsignore,Makefile.am,fuse.font.sbf,mkfusefont.pl}: add
	 proportional font (part of patch #1150693) (Darren).