@@ -69,7 +69,10 @@ int widget_timer_init( void );
 int widget_timer_end( void );
 
 void widget_rectangle( int x, int y, int w, int h, int col );
-void widget_printstring( int x, int y, int col, const char *s );
+int widget_printstring( int x, int y, int col, const char *s );
+void widget_printchar_fixed( int x, int y, int col, int c );
+void widget_print_title( int y, int col, const char *s );
+void widget_printstring_right( int x, int y, int col, const char *s );
 void widget_display_lines( int y, int h );
 
 void widget_up_arrow( int x, int y, int colour );
