@@ -1315,3 +1315,5 @@
          if we don't have a resonable match try to find one (Fred).
 20050501 widget/{.cvsignore,Makefile.am,fuse.font.sbf,mkfusefont.pl}: add
 	 proportional font (part of patch #1150693) (Darren).
+20050501 widget/{widget.c,widget_internals.h}: core support for
+	 proportional printing (next part of patch #1150693) (Darren).
